--- a/app/views/fulcrum/_lessees.html.erb
+++ b/app/views/fulcrum/_lessees.html.erb
@@ -2,30 +2,27 @@
 <h1>Lessees</h1>
 <table class="table table-striped" summary="Lessee List">
   <tr>
-    <th></th>
     <th>Lessee
       <%= link_to(new_lessee_path) do %>
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
       <% end %></th>
+    <th>Identifier</th>
     <th>Products</th>
     <th>Components</th>
+    <th>Policies</th>
   </tr>
   <% lessees.each do |lessee| %>
     <tr>
+      <td><%= link_to lessee.id, lessee_path(lessee) %></td>
       <td>
+        <%= lessee.identifier %>
         <% if lessee.institution? %>
-          <span class="glyphicon glyphicon-registration-mark" aria-hidden="true"></span>
-        <% end %>
-      </td>
-      <td>
-        <% if lessee.institution? %>
-          <%= link_to lessee.institution.name, lessee_path(lessee) %>
-        <% else %>
-          <%= link_to lessee.identifier, lessee_path(lessee) %>
+          <%= lessee.institution.name %>
         <% end %>
       </td>
       <td><%= lessee.products.count() %></td>
       <td><%= lessee.components.count() %></td>
+      <td><%= lessee.policies.count() %></td>
     </tr>
   <% end %>
 </table>
