--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,6 +16,13 @@
     <div class="col-md-12">
       <%= render partial: 'lessees', locals: { product: @product, lessees: @product.lessees } %>
     </div>
+    <div class="col-md-12"><h2>Policies</h2></div>
+    <div class="col-md-12">
+      <%= render partial: 'policies', locals: { product: @product, policies: @product.policies } %>
+    </div>
+    <div class="col-md-12">
+      <%= link_to 'New Policy', new_product_policy_path(@product) %>
+    </div>
     <div class="col-md-12"><br/></div>
     <div class="col-md-12">
       <%= link_to_if @product.update?, 'Edit', edit_product_path(@product) %>
