--- a/app/views/counter_reports/without_customer_id/index.html.erb
+++ b/app/views/counter_reports/without_customer_id/index.html.erb
@@ -2,11 +2,26 @@
   <meta name="turbolinks-cache-control" content="no-cache">
 <% end %>
 
+<script type="text/javascript">
+$(document).on('turbolinks:load', function() {
+  $('.start-date').datepicker({
+    dateFormat: "yy-mm-dd",
+    defaultDate: new Date(2018, 07, 01),
+    minDate: new Date(2018, 07, 01) // we only started tracking in August 2018
+  });
+  $('.end-date').datepicker({
+    dateFormat: "yy-mm-dd",
+    defaultDate: +0,
+    minDate: new Date(2018, 08, 01)
+  });
+});
+</script>
+
 <h1>COUNTER 5 Reports</h1>
 
 <% @active_reports.each do |report_id, report| %>
 <form action=<%= counter_report_path(id: report_id) %> method="show">
-<div class="form-row">
+<div class="row">
   <div class="col-sm-2">
     <h2><%= report %></h2>
   </div>
@@ -20,11 +35,11 @@
   </div>
   <div class="col-sm-2 form-group">
     <label for="start_date">Start</label>
-    <input type="date" name="start_date" class="form-control" />
+    <input type="text" name="start_date" aria-label="Start date in yyyy-mm-dd format" class="start-date form-control" />
   </div>
   <div class="col-sm-2 form-group">
     <label for="end_date">End</label>
-    <input type="date" name="end_date" class="form-control" />
+    <input type="text" name="end_date" aria-label="End date in yyyy-mm-dd format" class="end-date form-control" />
   </div>
   <div class="col-sm-2 form-group" style="margin-top: 2em;">
     <button type="submit" class="btn btn-primary">View</button>
