--- a/app/views/counter_reports/without_customer_id/show.html.erb
+++ b/app/views/counter_reports/without_customer_id/show.html.erb
@@ -4,28 +4,33 @@
 
 <table class="table">
   <% @report[:header].each do |k, v| %>
-  <tr>
-    <td><b><%= k %></b></td>
-    <td><%= v %></td>
-    <% 1.upto(columns - 2).each do |x| %>
-      <td>&nbsp;</td>
+    <tr>
+      <td><b><%= k %></b></td>
+      <td><%= v %></td>
+      <% 1.upto(columns - 2).each do |x| %>
+        <td>&nbsp;</td>
+      <% end %>
+    </tr>
     <% end %>
-  </tr>
-  <% end %>
-  <tr>
-    <% 1.upto(columns).each do |x| %>
-      <td>&nbsp;</td>
+    <tr>
+      <% 1.upto(columns).each do |x| %>
+        <td>&nbsp;</td>
+      <% end %>
+    </tr>
+    <tr>
+    <% if columns.zero? %>
+      <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
+      <td><b>Report is empty</b></td><td>&nbsp;</td>
+    <% else %>
+      <% @report[:items][0].each do |k, v| %>
+        <td><b><%= k %></b></td>
+      <% end %>
+      <% @report[:items].each do |item| %>
+      <tr>
+        <% item.each do |k, v| %>
+        <td><%= v %></td>
+        <% end %>
+      </tr>
     <% end %>
-  </tr>
-  <tr>
-  <% @report[:items][0].each do |k, v| %>
-    <td><b><%= k %></b></td>
-  <% end %>
-  <% @report[:items].each do |item| %>
-  <tr>
-    <% item.each do |k, v| %>
-    <td><%= v %></td>
-    <% end %>
-  </tr>
   <% end %>
 </table>
