--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -312,6 +312,28 @@ footer.press {
 ///////////////////////////////////
 .monograph {
 
+  figure.peer_review {
+    margin-top: 1.5em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+  
+  figure.peer_review img {
+    border: none !important;
+    width: 85px;
+    height: 80px;
+    margin-right: .5em;
+  }
+
+  figure.peer_review figcaption {
+    font-size: 11px;
+  }
+
   .fulcrum_sidebar {
     // In hyrax2 this defaults to grey which we don't want
     background-color: white;
