--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -989,6 +989,49 @@ $lever-black-80: #342f2e;
     }
   }
 
+  // EPUB Reader
+  #reader {
+
+    .cozy-control .cozy-h1 {
+      font-size: 1.5em;
+    }
+
+    .button {
+      @include epub-button-background-color($lever-brand-color,$lever-accent-color,$lever-white);
+    }
+
+    .button--lg {
+      @include epub-button-background-color($lever-brand-color,$lever-accent-color,$lever-white);
+    }
+
+    .button--sm {
+      @include epub-button-background-color($lever-brand-color,$lever-accent-color,$lever-white);
+    }
+
+    i[class^='icon-chevron-'] {
+      @include epub-prev-next-color($lever-brand-color);
+      transition: 0.2s ease-in;
+    }
+
+    i[class^='icon-chevron-']:hover {
+      @include epub-hover-prev-next-color($lever-brand-color);
+      transition: 0.2s ease-in;
+    }
+
+    .cozy-control .logo {
+      height: 46.6px;
+      width: 36px;
+      overflow: hidden;
+
+      img {
+        height: 36px;
+        margin-top: 6px;
+        margin-left: 11px;
+      }
+    }
+
+  }
+
 }
 ///////////////////////////////////////////////
 //
