--- a/app/views/hyrax/admin/stats/_analytics.html.erb
+++ b/app/views/hyrax/admin/stats/_analytics.html.erb
@@ -2,11 +2,12 @@
   <h1><span class="fa fa-google"></span> Google Analytics</h1>
 <% end %>
 
-<% presses = current_user.admin_presses.where.not(google_analytics_url: nil) %>
+<% presses = current_user.admin_presses.where.not(google_analytics_url: nil).sort_by(&:name) %>
 <% if presses.size > 1 %>
-  <select onchange="document.getElementById('ga_iframe').src=this.value";">
+  <label class="sr-only" for="publisher_report">Select Publisher for Google Analytics Report</label>
+  <select id="publisher_report" onchange="document.getElementById('ga_iframe').src=this.value;">
     <% selected = "selected" %>
-    <% presses.sort_by(&:name).each do |press| %>
+    <% presses.each do |press| %>
       <option value="<%= press.google_analytics_url %>" <%= selected %>>
         <%= press.name %>
       </option>
@@ -20,7 +21,7 @@
     <div class="panel-body">
       <div class="iframe-container">
         <iframe src="<%= presses[0].google_analytics_url %>"
-                id="ga_iframe" class=".embed-responsive-item">
+          id="ga_iframe" class=".embed-responsive-item">
         </iframe>
       </div>
     </div>
