Resolves HELIO-2211: Allow Press Admins access to Reports on dashboard

--- a/app/views/hyrax/admin/stats/_counter.html.erb
+++ b/app/views/hyrax/admin/stats/_counter.html.erb
@@ -1,4 +1,4 @@
 <% provide :page_header do %>
   <h1><span class="fa fa-list-ol"></span> COUNTER Reports</h1>
 <% end %>
-<li><%= link_to "COUNTER Reports", main_app.customers_path %></li>
+<li><%= link_to "COUNTER Reports", main_app.counter_reports_path %></li>
