--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -12,6 +12,7 @@
       <p><%= @monograph_presenter.permission_badge %>
       <%= @monograph_presenter.workflow.badge %></p>
     <% end %>
+    <%= render 'shared/altmetric_dimensions' %> 
     <% if @monograph_presenter.peer_review? %>
       <div><%= @monograph_presenter.peer_review.file.content.force_encoding("UTF-8").html_safe %></div>
     <% end %>
