HELIO-2105 - modify styling of altmetric

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -335,6 +335,8 @@ footer.press {
   }
 
   .metrics {
+    padding-top: .5em;
+    
     .altmetric-embed {
       padding-bottom: .5em;
     }
@@ -387,7 +389,6 @@ footer.press {
     }
 
   }
-
 
   // EPUB - MONOGRAPH INFORMATION
   .monograph-info-epub {
