--- a/app/views/fulcrum/_sidebar.html.erb
+++ b/app/views/fulcrum/_sidebar.html.erb
@@ -5,6 +5,7 @@
   <li <%= "class=active" if partial.to_s == :logs.to_s %>><a href="<%= main_app.partial_fulcrum_path(partial: :logs) %>"><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> Logs</a></li>
   <li <%= "class=active" if partial.to_s == :policies.to_s %>><a href="<%= main_app.partial_fulcrum_path(partial: :policies) %>"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Policies</a></li>
   <li <%= "class=active" if partial.to_s == :products.to_s %>><a href="<%= main_app.partial_fulcrum_path(partial: :products) %>"><span class="glyphicon glyphicon-king" aria-hidden="true"></span> Products</a></li>
+  <li <%= "class=active" if partial.to_s == :product_noids.to_s %>><a href="<%= main_app.partial_fulcrum_path(partial: :product_noids) %>"><span class="glyphicon glyphicon-king" aria-hidden="true"></span> Product NOIDs</a></li>
   <li <%= "class=active" if partial.to_s == :components.to_s %>><a href="<%= main_app.partial_fulcrum_path(partial: :components) %>"><span class="glyphicon glyphicon-knight" aria-hidden="true"></span> Components</a></li>
   <li <%= "class=active" if partial.to_s == :lessees.to_s %>><a href="<%= main_app.partial_fulcrum_path(partial: :lessees) %>"><span class="glyphicon glyphicon-pawn" aria-hidden="true"></span> Lessees</a></li>
   <li <%= "class=active" if partial.to_s == :institutions.to_s %>><a href="<%= main_app.partial_fulcrum_path(partial: :institutions) %>"><span class="glyphicon glyphicon-registration-mark" aria-hidden="true"></span> Institutions</a></li>
