--- a/app/views/product_noids/edit.html.erb
+++ b/app/views/product_noids/edit.html.erb
@@ -1,14 +1,14 @@
 <div id="maincontent">
   <div class="row">
-    <div class="col-md-12"><h1>Editing Policy</h1></div>
+    <div class="col-md-12"><h1>Editing Product NOID</h1></div>
     <div class="col-md-12">
-      <%= render 'form', policy: @policy %>
+      <%= render 'form', product_noid: @product_noid %>
     </div>
     <div class="col-md-12"><br/></div>
     <div class="col-md-12">
-      <%= link_to 'Show', @policy %>
+      <%= link_to 'Show', @product_noid %>
       <span> | </span>
-      <%= link_to 'Back', policies_path %>
+      <%= link_to 'Back', product_noids_path %>
     </div>
     <div class="col-md-12"><br/></div>
   </div>
