HELIO-2205 - changes to the Fulcrum homepage, about page, accessibility page, and minor tweaks to other files to consistently reflect those changes.

--- a/fulcrum/_includes/footer.html
+++ b/fulcrum/_includes/footer.html
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col l6 s12">
               <img class="responsive-img" src="/img/fulcrum-white-footer.png" alt="Fulcrum">
-              <p class="grey-text text-lighten-4 about light">{{ site.description }} Fulcrum is currently under development but seeks partners interested in being early adopters. For more information about the platform, please subscribe to our newsletter or send an e-mail to <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
+              <p class="grey-text text-lighten-4 about light">{{ site.description }} For more information about the platform, please subscribe to our <a href="https://www.fulcrum.org/#get-updates">newsletter</a>, follow us on <a href="https://twitter.com/fulcrumpub">Twitter</a>, or send an e-mail to <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
         </div>
         <div class="col l3 s12 offset-l1 footer-menu">
           <ul>
