--- a/fulcrum/_includes/header.html
+++ b/fulcrum/_includes/header.html
@@ -13,15 +13,15 @@
        </a>
 
         <ul class="right hide-on-med-and-down">
+          <li><a href="/about/index.html#readers" class="main-nav-link navi">For Readers</a></li>
           <li><a href="/about/index.html#authors" class="main-nav-link navi">For Authors</a></li>
           <li><a href="/about/index.html#publishers" class="main-nav-link navi">For Publishers</a></li>
-          <li><a href="/about/index.html#readers" class="main-nav-link navi">For Readers</a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
+          <li><a href="/about/index.html#readers">For Readers</a></li>
           <li><a href="/about/index.html#authors">For Authors</a></li>
           <li><a href="/about/index.html#publishers">For Publishers</a></li>
-          <li><a href="/about/index.html#readers">For Readers</a></li>
           <li><a href="/blog/">Blog</a></li>
           <li><a href="mailto:{{ site.email }}">Contact</a></li>
           <li><a href="https://github.com/{{ site.github_username }}">Contribute</a></li>
@@ -29,7 +29,7 @@
           <li><a href="/terms/">Terms of Service</a></li>
           <li><a href="/users/sign_in">Login</a></li>
         </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="#" data-activates="nav-mobile" class="button-collapse" aria-label="Open menu"><i class="material-icons">menu</i></a>
       </div>
     </nav>
   </div>
